--- a/templates/base.html
+++ b/templates/base.html
@@ -3,34 +3,37 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %}SELOEDU{% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
 </head>
 <body>
-    <header>
-        {% if current_user.is_authenticated %}
+    <div class="layout">
+        <aside>
+            <h2>SELOEDU</h2>
+
+            {% if current_user.is_authenticated %}
             <nav>
-                <a href="{{ url_for('dashboard') }}">Dashboard</a> |
-                <a href="{{ url_for('users.index') }}">Usuários</a> |
-                <a href="{{ url_for('auth.logout') }}">Sair</a> 
-            </nav>
-        {% endif %}
-    </header>
-
-    <main>
-        {% with messages = get_flashed_messages(with_categories=true) %}
-            {% if messages %}
                 <ul>
-                    {% for category, message in messages %}
-                        {% if category != "message" %}
-                            <li><strong>{{ category }}:</strong> {{ message }}</li>
-                        {% endif %}
-                    {% endfor %}
+                    <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+                    <li><a href="{{ url_for('users.index') }}">Usuários</a></li>
                 </ul>
+            </nav>
+
+            <div class="sidebar-footer">
+                <ul>
+                    <li><a href="{{ url_for('users.profile') }}">Perfil</a></li>
+                    <li><a href="{{ url_for('auth.login') }}">Login</a></li>
+                    <li><a href="{{ url_for('auth.logout') }}">Sair</a></li>
+                </ul>
+            </div>
             {% endif %}
-        {% endwith %}
+        </aside>
 
-
-        {% block content %}{% endblock %}
-    </main>
+        <!-- CONTEÚDO PRINCIPAL -->
+        <main>
+            {% block messages %}{% endblock %}
+            {% block content %}{% endblock %}
+        </main>
+    </div>
 
     <footer>
         <p>SELOEDU © 2025</p>
