--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -5,4 +5,8 @@
 {% block content %}
     <h1>Bem-vindo, {{ current_user.nome }}!</h1>
     <p>Este é o seu painel de controle.</p>
+    
+    <div class="mt-3">
+        <a href="{{ url_for('users.profile') }}" class="btn btn-primary">Ver Perfil</a>
+    </div>
 {% endblock %}
