Add password reset functionality with email support

--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -21,6 +21,7 @@
         </div>
         <button type="submit" class="btn">Entrar</button>
       </form>
+      <a href="{{ url_for('auth.forgot_password') }}" >Esqueci a Senha</a>
     </div>
   </div>
 </body>
