--- a/templates/home.html
+++ b/templates/home.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SELOEDU - Home</title>
-  <link rel="stylesheet" href="/static/custom.css">
-</head>
-<body>
-  <main class="wrap">
-    <section class="card">
-      <h1>Bem-vindo ao <strong>SELOEDU</strong></h1>
-      <p> Seu gerenciador de aplicação de treinamentos. </p>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/static/custom.css" />
+    <title>Selo Edu</title>
+  </head>
+  <body>
+    <div class="container">
+      <h1>Bem Vindo ao SELOEDU</h1>
+      <p>Seu gerenciador de aplicação de treinamentos.</p>
       <p>Faça login para acessar o painel.</p>
-      <a class="btn" href="{{ url_for('auth.login') }}">Entrar</a>
-    </section>
-  </main>
-</body>
+      <button
+        class="botton-enter"
+        onclick="location.href=`{{ url_for('auth.login') }}`"
+      >
+        Entrar
+      </button>
+    </div>
+  </body>
 </html>
