--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SELOEDU - Login</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
-</head>
-<body>
-  <div class="wrap">
-    <div class="card">
-      <h1>Login</h1>
-      <form method="POST" action="{{ url_for('auth.login') }}">
-        <div class="form-group">
-          <label for="email">E-mail</label>
-          <input type="text" id="email" name="email" required>
-        </div>
-        <div class="form-group">
-          <label for="password">Senha</label>
-          <input type="password" id="password" name="password" required>
-        </div>
-        <button type="submit" class="btn">Entrar</button>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}" />
+    <title>Selo Edu</title>
+  </head>
+  <body>
+    <div class="container">
+      <form class="login-form" method="POST" action="{{ url_for('auth.login') }}">
+        <h1>Login</h1>
+        <p>Email</p>
+        <input type="email" name="email" />
+        <p>Senha</p>
+        <input type="password" name="password" /> <br />
+        <button type="submit" class="botton-login">
+          Entrar
+        </button>
       </form>
-      <a href="{{ url_for('auth.forgot_password') }}" >Esqueci a Senha</a>
+
+      <a href="{{ url_for('auth.forgot_password_request') }}">Esqueci a senha</a>
     </div>
-  </div>
-</body>
+  </body>
 </html>
