--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,12 +1,18 @@
 {% extends "base.html" %}
-
-{% block title %}Dashboard{% endblock %}
-
 {% block content %}
-    <h1>Bem-vindo, {{ current_user.nome }}!</h1>
-    <p>Este é o seu painel de controle.</p>
-    
-    <div class="mt-3">
-        <a href="{{ url_for('users.profile') }}" class="btn btn-primary">Ver Perfil</a>
-    </div>
+<br>
+  <p>Bem-vindo, {{ current_user.email if current_user.is_authenticated else 'Usuário' }}!</p>
+{% endblock %}
+
+{% block messages %}
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      {% for category, message in messages %}
+        <br>
+        <div class="alert alert-{{ category }}">
+          {{ message }}
+        </div>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
 {% endblock %}
